# Advent-of-Code-2023

./: pyproject.toml
aoc/: __main__.py
aoc/day_01/: core.py  seed.py
aoc/day_02/: core.py  seed.py
aoc/day_03/: core.py  seed.py
aoc/day_04/: core.py  seed.py
aoc/day_05/: core.py  seed.py
tests/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_XX.py
