[tool.poetry]
name = "aoc23"
version = "0.1.0"
description = ""
readme = "readme.md"
packages = [{include = "aoc"}]
authors = ["Alexander Hultnér <ahultner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pytest-xdist = "^3.5.0"
pytest-cov = "^4.1.0"
pytest-tldr = "^0.2.2"
toolz = "^0.11.1"
more_itertools = "^10.1.0"
bpython = "^0.20.1"
hypothesis = "^6.91.0"
pydantic = "^2.5.2"
multiprocess = "^0.70.11"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
mypy = "^1.7.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
autoflake = "^2.2.1"
jupyterlab = "^4.0.9"
devtools = "^0.6.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.coverage.run]
omit = [
    "aoc/__main__.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
